# mc-ai

./: .gitignore  CMakeLists.txt  Makefile  README.md  all_texture_blocks.csv  block_assets.csv  blocks_config.json  convert_csv_to_blocks.py  extract_all_texture_blocks.py  fix_blocks_config.py  generate_block_enum.py  imgui.ini  items_config.json  list_block_assets.py  organize_block_assets.py  organize_block_assets_rate_limited.py  organize_block_assets_threaded.py  organized_block_assets_final.json  test_new_blocks.py
include/: BiomeSystem.h  Block.h  BlockManager.h  BlockTypes.h  Chunk.h  CraftingSystem.h  Debug.h  Game.h  Inventory.h  Item.h  NetworkClient.h  Player.h  PlayerModel.h  Renderer.h  Server.h  ServerDiscovery.h  World.h
shaders/: README.md  fragment.glsl  player_fragment.glsl  player_vertex.glsl  sky_fragment.glsl  sky_vertex.glsl  vertex.glsl  water_fragment.glsl  water_vertex.glsl  wireframe_fragment.glsl
src/: BiomeSystem.cpp  Block.cpp  BlockManager.cpp  Chunk.cpp  CraftingSystem.cpp  Game.cpp  Inventory.cpp  ItemManager.cpp  NetworkClient.cpp  Player.cpp  PlayerModel.cpp  Renderer.cpp  Server.cpp  ServerDiscovery.cpp  World.cpp  main.cpp
